@@ -5,7 +5,7 @@
  */
 package net.azib.ipscan.fetchers;
 
-import net.azib.ipscan.gui.PreferencesDialog;
+
 
 import java.util.*;
 import java.util.prefs.Preferences;
@@ -20,7 +20,6 @@ public class FetcherRegistry {
 	static final String PREFERENCE_SELECTED_FETCHERS = "selectedFetchers";
 
 	private final Preferences preferences;
-	private final PreferencesDialog preferencesDialog;
 	
 	/** All available Fetcher implementations, List of Fetcher instances */
 	private Map<String, Fetcher> registeredFetchers;
@@ -31,9 +30,8 @@ public class FetcherRegistry {
 	/** A collection of update listeners - observers of FetcherRegistry */
 	private List<FetcherRegistryUpdateListener> updateListeners = new ArrayList<>();
 		
-	public FetcherRegistry(List<Fetcher> fetchers, Preferences preferences, PreferencesDialog preferencesDialog) {
+	public FetcherRegistry(List<Fetcher> fetchers, Preferences preferences) {
 		this.preferences = preferences;
-		this.preferencesDialog = preferencesDialog;
 
 		registeredFetchers = createFetchersMap(fetchers);
 
@@ -162,12 +160,6 @@ public class FetcherRegistry {
 	}
 
 	private FetcherPrefs createFetcherPrefsEditor(Class<? extends FetcherPrefs> prefsClass) throws Exception {
-		try {
-			var constructor = prefsClass.getConstructor(PreferencesDialog.class);
-			return constructor.newInstance(preferencesDialog);
-		}
-		catch (NoSuchMethodException e) {
-			return prefsClass.newInstance();
-		}
+		return prefsClass.getDeclaredConstructor().newInstance();
 	}
 }
